# os-scheduler-atlas

./: .env  .env.example  .gitignore  README.md  dataset_test  docker-compose.yaml  testdb.db
backend/: .dockerignore  DEVELOPMENT.md  Dockerfile  pyproject.toml  testdb.db
backend/alembic/: env.py
backend/cpp/: CMakeLists.txt  test_main.cpp
backend/cpp/scheduler/: CMakeLists.txt  pybind_module.cpp  scheduler.cpp  scheduler.h
backend/cpp/tests/: CMakeLists.txt
backend/cpp/tests/scheduler/: integration_tests.cpp  system_tests.cpp  unit_tests.cpp
backend/src/: config.py
backend/src/api/: main.py  models.py  validators.py
backend/src/database/: connection.py  models.py  queries.py
backend/src/ml/: data_generator.py  feature_engineer.py  model_trainer.py  test.py
backend/src/services/: simulation_service.py
docs/: OS_Scheduler_Simulator_PRD.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx
os-scheduler-atlas-pypackage/backend/cpp/scheduler/: pybind_module.cpp
