[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "os-scheduler-atlas"
version = "0.1.0"
description = "OS scheduling simulator backend with ml efficency model and C++ core"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "typer>=0.12",
  "rich>=13.7",
  "pytest>=8.3",
  "fastapi==0.120.2",
  "uvicorn[standard]==0.38.0",
  "os-scheduler-atlas==0.1.0",
  "sqlalchemy>=2.0.44",
  "alembic>=1.17.1",
  "psycopg2-binary>=2.9.11"
]

[tool.scikit-build]
wheel.py-api = "py3"
cmake.version = ">=3.20"
cmake.source-dir = "cpp"
build.verbose = true