[project]
name = "atlas-os"
version = "0.1.0"
description = "OS scheduling simulator backend with ml efficency model and C++ core"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "typer>=0.12",
  "rich>=13.7",
  "pytest>=8.3",
  "fastapi==0.120.2",
  "uvicorn[standard]==0.38.0",
  "os-simulator==0.2.1",
  "sqlalchemy>=2.0.44",
  "alembic>=1.17.1",
  "psycopg2-binary>=2.9.11",
  "pydantic-settings>=2.6.1",
  "pandas>=2.3.3",
  "scikit-learn>=1.3.0",
  "joblib>=1.5.3"
]

